--- a/Leave-Management/Leave-Management.csproj
+++ b/Leave-Management/Leave-Management.csproj
@@ -7,6 +7,11 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Data\Migrations\20220429062043_AddedDefaultDaysandPeriod.cs" />
+    <Compile Remove="Data\Migrations\20220429062043_AddedDefaultDaysandPeriod.Designer.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="AutoMapper" Version="11.0.1" />
     <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="11.0.0" />
     <PackageReference Include="FontAwesome" Version="4.7.0" />
